--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
