--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^13.0.1
   geocoding: ^3.0.0
   lottie: ^3.1.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
